# nuke

./: CMakeLists.txt  LICENSE  README.md  makefile  meson.build
data/: com.github.caveware.nuke.appdata.xml  com.github.caveware.nuke.appdata.xml.in  com.github.caveware.nuke.desktop  com.github.caveware.nuke.desktop.in  meson.build
debian/: changelog  control  copyright
po/: com.github.caveware.nuke.pot  de.po  es.po  zh.po
src/: DurationSelector.vala  Main.vala  WattageBox.vala  WattageRow.vala  WattageSelector.vala
